returning to project, refetched data, fixed error handling

--- a/getting_data.ipynb
+++ b/getting_data.ipynb
@@ -2,16 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yaml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "False"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -23,7 +32,7 @@
     "from pathlib import Path\n",
     "import requests\n",
     "from pprint import pprint\n",
-    "from typing import NamedTuple\n",
+    "from typing import NamedTuple, List\n",
     "import pickle\n",
     "import time\n",
     "from dotenv import load_dotenv\n",
@@ -33,12 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Card(NamedTuple):\n",
-    "    src: str\n",
+    "    src: List[str]\n",
     "    title: str"
    ]
   },
@@ -51,11 +60,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "URL = os.getenv(\"POKEMON_PAGE_URL\")\n",
+    "with open(\"source.yaml\",\"r\") as fp:\n",
+    "    source = yaml.safe_load(fp)\n",
+    "\n",
+    "\n",
+    "URL = source[\"source\"]\n",
     "page_number = 1\n",
     "set_res = requests.get(\n",
     "    URL.format(page_number=page_number))\n",
@@ -65,33 +78,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_sets = [Card(i['srcset'].split(', '), i.parent['title'])\n",
+    "import re\n",
+    "src_sets = [Card(    [re.sub(r' \\d\\d\\dw',\"\",j) for j in i['srcset'].split(', ')]     , i.parent['title'])\n",
     "            for i in card_imgs]\n",
     "\n",
     "card_set = [Card(card.src[1].replace(\" 225w\", \"\").strip(), card.title)\n",
-    "            for card in src_sets]\n",
-    "# pprint(card_set[:3])"
+    "            for card in src_sets]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "191\n",
-      "192\n",
-      "193\n",
-      "194\n",
-      "195\n",
-      "11640\n"
+     "data": {
+      "text/plain": [
+       "['https://pkmncards.com/wp-content/uploads/sv7_en_104_std.jpg',\n",
+       " 'https://pkmncards.com/wp-content/uploads/sv7_en_104_std-225x314.jpg',\n",
+       " 'https://pkmncards.com/wp-content/uploads/sv7_en_104_std-312x436.jpg']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "src_sets[0].src"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: '/home/adem/Projects/GAN/gan/data/saved_index.pickle'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[12], line 13\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m:\n\u001b[1;32m     10\u001b[0m     cards \u001b[38;5;241m=\u001b[39m []\n\u001b[0;32m---> 13\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(data_path \u001b[38;5;241m/\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msaved_index.pickle\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mrb\u001b[39m\u001b[38;5;124m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m fp:\n\u001b[1;32m     14\u001b[0m     \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[1;32m     15\u001b[0m         START \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mint\u001b[39m(pickle\u001b[38;5;241m.\u001b[39mload(fp)) \u001b[38;5;241m+\u001b[39m \u001b[38;5;241m1\u001b[39m\n",
+      "File \u001b[0;32m~/anaconda3/lib/python3.12/site-packages/IPython/core/interactiveshell.py:324\u001b[0m, in \u001b[0;36m_modified_open\u001b[0;34m(file, *args, **kwargs)\u001b[0m\n\u001b[1;32m    317\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[38;5;241m0\u001b[39m, \u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m}:\n\u001b[1;32m    318\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[1;32m    319\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mIPython won\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m by default \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    320\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    321\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124myou can use builtins\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m open.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    322\u001b[0m     )\n\u001b[0;32m--> 324\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m io_open(file, \u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/home/adem/Projects/GAN/gan/data/saved_index.pickle'"
      ]
     }
    ],
@@ -104,12 +139,14 @@
     "        cards = pickle.load(fp)\n",
     "except EOFError:\n",
     "    cards = []\n",
+    "except:\n",
+    "    cards = []\n",
     "\n",
+    "try:\n",
+    "    with open(data_path / 'saved_index.pickle', 'rb') as fp:\n",
+    "         START = int(pickle.load(fp)) + 1\n",
     "\n",
-    "with open(data_path / 'saved_index.pickle', 'rb') as fp:\n",
-    "    try:\n",
-    "        START = int(pickle.load(fp)) + 1\n",
-    "    except:\n",
+    "except:\n",
     "        START = 1\n",
     "\n",
     "FETCH_NUMBER = 5\n",
@@ -158,7 +195,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
